# aerial-manipulation

./: .gitignore  README.md  q
am_traj/: CMakeLists.txt  package.xml
am_traj/config/: traj.rviz
am_traj/include/am_traj/: ros_msgs.h
am_traj/launch/: example0.launch
am_traj/src/: example0_node.cpp
data/: 2021-07-01-04-24-56.vid2.ground.55.120.bag.full.csv  2021-09-01-18-10-51.labfloor.01.bag.full.csv  2021-09-01-18-31-38.labfloor.01.bag.full.csv  2021-09-02-02-23-49.foam.02.bag.full.csv  animate_plot.py  animate_rnw_fig_G.py  animate_rnw_generic.py  animate_rnw_plot11.py  animate_rnw_plot9.py  animate_rnw_vid1.py  animate_rnw_vid2vid3.py  animate_rnw_vid4.py  animate_rnw_vid5.py  animate_rnw_vid6.py  animate_rnw_vid7.py  animate_rnw_vid8.py  animate_rnw_xy_generic.py  calc_rl_data.py  dual_quad_plot.m  fig.55.120.fig  fig.55.120.thrust.fig  fig.55.90.fig  fig.55.90.thrust.fig  plot_rl_1.py  plot_rl_2.py  plot_rl_3.py  plot_rl_terrain.py  rl_foam_mat_amp.mat  rl_labfloor_amp.mat  table.55.120.mat  table.55.90.mat  table.caging.mat  vid2.csv  vid3.csv  vid4.csv  vid5.csv  vid7.n30t40.bag.cont.csv  vid7.n35t40.bag.cont.csv  vid8-45-2.csv  vid8-45.csv  (+1 more)
matlab_utils/: amp25.mat  calc_com.m  calc_table.m  contact_labfloor.mat  contact_mat.mat  dat_foam.mat  energy_diff.mat  energy_plot  energy_plot.m  energy_ts.mat  extract_xy_data.m  lap_plot.m  manual_floor_30_amp.mat  manual_floor_35_amp.mat  manual_floor_40_amp.mat  manual_floor_long_amp.mat  plot_xy.m  (+8 more)
rnw_ros/: CMakeLists.txt  package.xml
rnw_ros/cfg/: MocapCalib.cfg  RNW.cfg  Rl.cfg  ThrustTest.cfg  TuningConeState.cfg  VelAcc.cfg
rnw_ros/config/: 99-usb-serial.rules  caging.rviz  caging_rl_config.yaml  cone.yaml  drone.rviz  flight.rviz  multiplot_insert.xml  pj_layout.xml  rl.rviz  rnw_config.yaml  rnw_config.yaml.small  rqt_multiplot_atti_loop.xml  rqt_multiplot_cable_length.xml  rqt_multiplot_cable_rnw.xml  rqt_multiplot_cone_heading.xml  rqt_multiplot_cone_state.xml  rqt_multiplot_ctrl_err.xml  rqt_multiplot_energy.xml  rqt_multiplot_grip.xml  rqt_multiplot_indi.xml  rqt_multiplot_insert.xml  rqt_multiplot_n3ctrl.xml  rqt_multiplot_n3ctrl_acc.xml  rqt_multiplot_rl.xml  rqt_multiplot_rnw.xml  rqt_multiplot_sdk_cmd.xml  rqt_multiplot_swarm_rnw_debug.xml  rqt_multiplot_tuning_drone2.xml  rqt_multiplot_vicon_imu.xml  swarm.rviz  swarm_rnw_config.yaml  swarm_sim.rviz  traj.rviz
rnw_ros/include/rnw_ros/: caging_state.h  cone_interface.h  cone_state_estimator.h  drone_interface.h  poly_traj.h  pose_utils.h  rl_agent_interface.h  rnw_config.h  rnw_planner.h  rnw_planner_v2.h  rnw_utils.h  ros_utils.h  swarm_interface.h  traj_uitls.h
rnw_ros/launch/: body_point_calib.launch  check_cable_length.launch  check_cable_planning.launch  check_cable_rnw.launch  check_caging_state.launch  check_cone_state.launch  check_grip_state.launch  check_planning.launch  check_planning_no_uav.launch  check_sim_uwb_ekf.launch  check_swarm_planning.launch  check_swarm_uwb.launch  check_thrust.launch  check_uwb.launch  cone_calib_tip.launch  cone_test.launch  flight.launch  frames.launch  gamepad_trigger.launch  ground_station.launch  ground_station_cable_rnw.launch  ground_station_caging_rl.launch  ground_station_caging_rnw.launch  ground_station_individual.launch  ground_station_swarm_rnw.launch  mocap_calib.launch  planning_test.launch  playback.launch  real.launch  ri-vicon.launch  rl_sim.launch  rl_test.launch  rnw_debug_sim.launch  robot_pose_ekf.launch  rviz.launch  sdk_vicon_playback.launch  sim.launch  sim_flight.launch  sim_flight_uwb.launch  sim_individual.launch  (+14 more)
rnw_ros/meshes/: haha.stl  handle.STL
rnw_ros/msg/: ConeState.msg  RockingCmd.msg
rnw_ros/nodes/: arm_manager_node.cpp  caging_rl_node.cpp  check_planning_assistant_node.cpp  dbg_atti_loop_node.cpp  dbg_rnw_cable_node.cpp  ekf_odom_node.cpp  fake_drone_node.cpp  gamepad_drone_cmd_node.cpp  gamepad_trigger_node.cpp  gen_paper_data_node.cpp  individual_flight_test_node.cpp  joystick_drone_cmd_node.cpp  js_pos_cmd_node.cpp  mocap_calib_node.cpp  odom2tf_node.cpp  pub_caging_state_node.cpp  pub_cone_debug_info_node.cpp  pub_cone_state_node.cpp  pub_contact_radius_node.cpp  pub_energy_node.cpp  pub_euler_angles_node.cpp  pub_frames_node.cpp  pub_grip_state_node.cpp  pub_mock_cone_node.cpp  pub_mock_uav_node.cpp  pub_obj_trace_node.cpp  pub_rnw_body_frame_node.cpp  pub_simulated_sensors.cpp  pub_swarm_rnw_debug_info_node.cpp  rl_controller_node.cpp  rnw_cable_node.cpp  rnw_caging_node.cpp  rnw_controller_node.cpp  rnw_planning_node.cpp  rnw_traj_server_node.cpp  swarm_rnw_controller_node.cpp  test_swarm_planner_node.cpp  test_traj_node.cpp  test_vel_cmd_node.cpp  thrust_test_node.cpp  (+7 more)
rnw_ros/script/: rl_agent.zsh
rnw_ros/scripts/: extract_old_rnw.cpp  extract_rl_rnw.cpp  extract_rnw.cpp  extract_thrust.cpp
rnw_ros/src/: body_point_calib_node.cpp  caging_state.cpp  cone_interface.cpp  cone_state_estimator.cpp  cone_test_node.cpp  cone_tip_calib_node.cpp  dbg_atti_loop_node.cpp  drone_interface.cpp  gamepad_trigger_node.cpp  mocap_calib_node.cpp  pub_cone_state_node.cpp  pub_contact_radius_node.cpp  pub_euler_angles_node.cpp  pub_frames_node.cpp  pub_mock_cone_node.cpp  pub_mock_uav_node.cpp  pub_traj_marker_node.cpp  rl_agent_interface.cpp  rnw_controller_node.cpp  rnw_odom.cpp  rnw_open_loop.cpp  rnw_planner.cpp  rnw_planner_v2.cpp  rnw_planning_node.cpp  rnw_traj_server_node.cpp  rnw_utils.cpp  sdk_test.cpp  swarm_interface.cpp  test_traj_node.cpp  traj_server_node.cpp  uav_ekf_node.cpp  vicon_imu_cali_node.cpp  visualize_cone_node.cpp  visualize_traj_node.cpp  yaw_command_node.cpp
rockwalk_kinematics/: CMakeLists.txt  README.md  package.xml  setup.py
rockwalk_kinematics/arduino/: motion_shield_output.ino
rockwalk_kinematics/config/: config.rviz  rqt_multiplot.xml
rockwalk_kinematics/launch/: rw_kinematics.launch
rockwalk_kinematics/object_model/: rockwalk_cone.dae
rockwalk_kinematics/script/: rockwalk_kinematics_node.py
rockwalk_kinematics/src/rockwalk_kinematics/: Publishers.py  RollingKinematics.py  Subscribers.py  Utilities.py  Visualization.py
(+198 files in other folders)
