<?xml version="1.0"?>
<package format="2">
  <name>am_traj</name>
  <author email="someone@somewhere.com">someone</author>
  <maintainer email="someone@somewhere.com">someone</maintainer>
  <version>0.1.0</version>
  <description>
      the example0 package
  </description>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>quadrotor_msgs</depend>

</package>
