<?xml version="1.0"?>
<package format="2">
  <name>rockwalk_kinematics</name>
  <version>0.0.0</version>
  <description>The rockwalk_kinematics package</description>

  <maintainer email="a.nazir@connect.ust.hk">nazir</maintainer>

  <license>TODO</license>

  <exec_depend>rospy</exec_depend>
  <exec_depend>launch</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
